# simogrants

./: .gitignore  AGENTS.md  CONVERSATION_LOG.md  Dockerfile  PLAN.md  README.md  WORKSPACE.md  agent.json  agent_log.json  backtest_results.json  cover_image_url.txt  deploy_and_attest.py  deploy_status.txt  filecoin_upload_results.json  filecoin_uploads.json  hardhat.config.js  package.blockchain.json  package.json  pipeline_results.json  pyproject.toml  render.yaml  run_pipeline.py  submission_metadata.json
contracts/: SIMOGrantsAttestation.sol
docs/dashboard/: index.html
evidence_bundles/: ethstaker.json  gitcoin-passport.json  openzeppelin.json  protocol-guild.json  uniswap-v3.json
pipeline_output/: ethstaker_evaluation.json  evidence_bundle.car  gitcoin-passport_evaluation.json  onchain_results.json  onchain_results.mainnet.json  openzeppelin_evaluation.json  pipeline_results.json  protocol-guild_evaluation.json  uniswap-v3_evaluation.json
pipeline_output/evidence/: ethstaker_evidence.json  gitcoin-passport_evidence.json  openzeppelin_evidence.json  protocol-guild_evidence.json  uniswap-v3_evidence.json
scripts/: deploy.js  deploy_and_attest.js  mainnet_publish.js  run_backtest.py
src/: config.py  database.py  main.py  models.py
src/blockchain/: __init__.py  attester.py  filecoin.py
src/collectors/: __init__.py  base.py  defillama.py  etherscan.py  gitcoin.py  github.py  (+5 more)
test/: attestation.test.js
tests/: test_sqf_bug_fix.py
whitepaper/: 01_architecture.md  02_collection_evaluation.md  03_mechanism_onchain.md  04_api_implementation_references.md
(+26 files in other folders)
