[project]
name = "simogrants"
version = "0.1.0"
description = "Stigmergic Impact Oracle for Public Goods"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "scipy>=1.13.0",
    "numpy>=1.26.0",
    "networkx>=3.3",
    "pydantic>=2.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.34.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
